--- a/src/sass/_pages.scss
+++ b/src/sass/_pages.scss
@@ -176,6 +176,8 @@
     }
 
     &-arrow {
+      position: relative;
+      top: -1px;
       display: inline-block !important;
       vertical-align: middle;
       margin-left: 5px;
